// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ase for OverrideSetsInputSelector Snapshot test OverrideSetsInputSelector - ARTIFACT: Artifact Context 1`] = `
<div>
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex"
    style="align-items: center; justify-content: end;"
  >
    <p
      class="StyledProps--font StyledProps--main"
    >
      Use Predefined Override Sets
    </p>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
          style="width: 350px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag bp3-minimal tag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  artifact1
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag bp3-minimal tag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  artifact2
                </span>
              </span>
            </span>
          </span>
          <span
            class="bp3-icon bp3-icon-caret-down StyledProps--main"
            icon="caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                caret-down
              </desc>
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`Test ase for OverrideSetsInputSelector Snapshot test OverrideSetsInputSelector - MANIFEST: MANIFEST Context 1`] = `
<div>
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex"
    style="align-items: center; justify-content: end;"
  >
    <p
      class="StyledProps--font StyledProps--main"
    >
      Use Predefined Override Sets
    </p>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
          style="width: 350px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
            >
              <span>
                manifest1
              </span>
              <button
                class="clearButton"
              >
                <span
                  class="bp3-icon bp3-icon-cross StyledProps--main"
                  icon="cross"
                >
                  <svg
                    data-icon="cross"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      cross
                    </desc>
                    <path
                      d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
          <span
            class="bp3-icon bp3-icon-caret-down StyledProps--main"
            icon="caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                caret-down
              </desc>
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`Test ase for OverrideSetsInputSelector Snapshot test OverrideSetsInputSelector - VARIABLE: VARIABLES Context 1`] = `
<div>
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex"
    style="align-items: center; justify-content: end;"
  >
    <p
      class="StyledProps--font StyledProps--main"
    >
      Use Predefined Override Sets
    </p>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
          style="width: 350px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag bp3-minimal tag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  variable1
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag bp3-minimal tag"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  variable2
                </span>
              </span>
            </span>
          </span>
          <span
            class="bp3-icon bp3-icon-caret-down StyledProps--main"
            icon="caret-down"
          >
            <svg
              data-icon="caret-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                caret-down
              </desc>
              <path
                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;
